--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group 'org.ic4j'
-version '0.6.19-RC4'
+version '0.6.19.7'
 
 sourceCompatibility = 1.8
 
@@ -43,11 +43,11 @@ dependencies {
 	compileOnly name: 'android-31'
 	compileOnly name: 'react-android-0.71.11'	
     
-    implementation("org.ic4j:ic4j-agent:0.6.19.3") {
+    implementation("org.ic4j:ic4j-agent:0.6.19.7") {
         exclude group: 'org.apache.httpcomponents.client5', module: 'httpclient5'
     }
     
-	implementation group: 'org.ic4j', name: 'ic4j-candid', version: '0.6.19.4'	
+	implementation group: 'org.ic4j', name: 'ic4j-candid', version: '0.6.19.7'	
 	
 	implementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.6'	
 	
