--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group 'org.ic4j'
-version '0.7.0'
+version '0.7.1'
 
 sourceCompatibility = 1.8
 
@@ -43,11 +43,11 @@ dependencies {
 	compileOnly name: 'android-31'
 	compileOnly name: 'react-android-0.71.11'	
     
-    implementation("org.ic4j:ic4j-agent:0.7.0") {
+    implementation("org.ic4j:ic4j-agent:0.7.1") {
         exclude group: 'org.apache.httpcomponents.client5', module: 'httpclient5'
     }
     
-	implementation group: 'org.ic4j', name: 'ic4j-candid', version: '0.7.0'	
+	implementation group: 'org.ic4j', name: 'ic4j-candid', version: '0.7.1'	
 	
 	implementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.13'	
 	
@@ -72,8 +72,14 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.bouncycastle/bcpkix-jdk18on
 	implementation group: 'org.bouncycastle', name: 'bcpkix-jdk18on', version: '1.78.1'
 	
+	// https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
+	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.0'
+	
 	// https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine
-	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.9.2'		
+	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.0'
+	
+	// https://mvnrepository.com/artifact/org.junit.platform/junit-platform-launcher
+	testImplementation group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.10.0'	
 }
 
 
