--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,9 @@ version '0.7.1'
 
 sourceCompatibility = 17
 
+
 repositories {
     mavenCentral()
-    flatDir {
-        dirs 'libs'
-    }
 }
 
 jar {
@@ -62,14 +60,6 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.springframework/spring-context
 	implementation group: 'org.springframework', name: 'spring-context', version: '6.1.10'
 	
-	implementation 'org.springframework.boot:spring-boot-starter'
-    implementation 'org.springframework.boot:spring-boot-starter-logging'
-    implementation 'ch.qos.logback:logback-classic'
-	
-	//implementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.13'
-	
-	//implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.9'
-	
 	// https://mvnrepository.com/artifact/jakarta.annotation/jakarta.annotation-api
 	implementation group: 'jakarta.annotation', name: 'jakarta.annotation-api', version: '3.0.0'	
 	
@@ -100,11 +90,13 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine
 	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.0'
 	
+	testImplementation 'org.springframework.boot:spring-boot-starter'
+    testImplementation 'org.springframework.boot:spring-boot-starter-logging'
+    testImplementation 'ch.qos.logback:logback-classic'
+	
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test
-	testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '3.3.1'
-	
-	//testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.9'
-	
+	testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '3.3.1'	
 }
+
 
 
