--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 plugins {
-    id 'org.springframework.boot' version '3.3.1'
+    //id 'org.springframework.boot' version '2.6.4'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java' 
     id 'eclipse'
 }
 
 group 'org.ic4j'
-version '0.7.1'
+version '0.7.1.1'
 
-sourceCompatibility = 17
+sourceCompatibility = 1.8
 
 
 repositories {
@@ -57,8 +57,11 @@ dependencies {
         exclude group: 'org.slf4j', module: 'slf4j-simple' 
     }         
 	
+	// https://mvnrepository.com/artifact/org.springframework/spring-core
+	implementation group: 'org.springframework', name: 'spring-core', version: '5.3.29'
+	
 	// https://mvnrepository.com/artifact/org.springframework/spring-context
-	implementation group: 'org.springframework', name: 'spring-context', version: '6.1.10'
+	implementation group: 'org.springframework', name: 'spring-context', version: '5.3.29'
 	
 	// https://mvnrepository.com/artifact/jakarta.annotation/jakarta.annotation-api
 	implementation group: 'jakarta.annotation', name: 'jakarta.annotation-api', version: '3.0.0'	
@@ -85,17 +88,17 @@ dependencies {
 	implementation group: 'org.bouncycastle', name: 'bcpkix-jdk18on', version: '1.78.1'
 	
 	// https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
-	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.0'
+	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.8.2'
 	
 	// https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine
-	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.0'
+	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.8.2'
 	
-	testImplementation 'org.springframework.boot:spring-boot-starter'
-    testImplementation 'org.springframework.boot:spring-boot-starter-logging'
+	testImplementation 'org.springframework.boot:spring-boot-starter:2.6.4'
+    testImplementation 'org.springframework.boot:spring-boot-starter-logging:2.6.4'
     testImplementation 'ch.qos.logback:logback-classic'
 	
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test
-	testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '3.3.1'	
+	testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.6.4'	
 }
 
 
